@@ -1,4 +1,6 @@
 0.13
+ [Tags::Output::Raw]
+ - Fix warning for 'no_data_callback' if isn't in element.
 
 0.12 2022-10-25T16:12:31+02:00
  [Common]
